AFS_Dev/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>If_Travel_Is_Billable_Explain__c</fullName>
        <inlineHelpText>If non-billable/unallowable costs as a percentage of total revenue exceed .5%, please explain.</inlineHelpText>
        <label>Explain NB/UA Costs &gt; .5% of TCR</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Sub_Segment__c</fullName>
        <inlineHelpText>Identifies the industry alignment of the opportunity.</inlineHelpText>
        <label>Industry Sub Segment</label>
        <picklist>
            <picklistValues>
                <fullName>D&amp;PS BORDER &amp; ID MGT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;PS DEFENSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;PS OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;PS PUBLIC SAFETY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEALTH-COMM&apos;L PAYER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEALTH-COMM&apos;L PROVIDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEALTH-PUBLIC OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEALTH-PUBLIC PAYER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS-AGRICULTURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS-CHILD SUPPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS-CHILD WELFARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS-EDUCATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS-EMPLOYMENT/UNEMPLOYMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS-NON-PROFIT ORGANIZATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS-PENSIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS-PUBLIC ASSISTANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS-SOC SECURITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M ADMIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M CUSTOMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M LICENSING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M POSTAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M REVENUE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initiating_Org__c</fullName>
        <inlineHelpText>Indicates if an opportunity originated via Accenture Direct. If unsure, leave field blank.</inlineHelpText>
        <label>Initiating Org</label>
        <picklist>
            <picklistValues>
                <fullName>Accenture Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_AFS_Prime_or_Subcontractor__c</fullName>
        <inlineHelpText>Indicates if AFS is the Prime on the oppportunity or the subcontractor. If they are the sub, user must include who the Prime is in the &quot;Prime Contractor (If not AFS)&quot; field</inlineHelpText>
        <label>Is AFS Prime or Subcontractor?</label>
        <picklist>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Complete__c</fullName>
        <inlineHelpText>Y/N field to determine if the Legal Review has been completed. 

Applies to: 
Competitive
Re-compete
On-Contract Growth
Extension

Excludes:
Opp type = Option</inlineHelpText>
        <label>Legal Review Complete?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Managing_Director_MC__c</fullName>
        <formula>Account.Managing_Director_MC__r.FirstName &amp; &quot; &quot; &amp; Account.Managing_Director_MC__r.LastName</formula>
        <label>MC Account Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Favored_Customer_Review_Conducted__c</fullName>
        <inlineHelpText>Indicates if a MFC review has been conducted.  AFS needs to comply to MFC if the opportunity qualifies. 

No is not an acceptable answer. Please review the MFC Decision Matrix link in the Custom Links section and adjust response to Yes.</inlineHelpText>
        <label>Most Favored Customer Review Conducted?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCI_Review_Complete__c</fullName>
        <inlineHelpText>Y/N field to indicate if Organizational Conflict of Interest review has been completed

Applies to Opp Type: 
Competitive
Extension
On-Contract Growth
Re-compete

Excludes: Options</inlineHelpText>
        <label>OCI Review Complete?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ONCONUS_Work_Required__c</fullName>
        <inlineHelpText>Does part of scope require work to be performed OCONUS and/or US territories, an OCONUS local hire or OCONUS travel by AFS or subcontractors? 

If yes, Foreign Travel Coordinator approval required: federal.ap55.required@accenturefederal.com</inlineHelpText>
        <label>OCONUS Work Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OSP_Notes__c</fullName>
        <inlineHelpText>Read only field to all users except OSPs. Notes field for the OSPs to leverage when adding comments to the opportunity</inlineHelpText>
        <label>OSP Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opp_FY__c</fullName>
        <formula>if(OR(ISPICKVAL(Reporting_Status__c, &quot;Won&quot;),ISPICKVAL(Reporting_Status__c, &quot;Closed&quot;),ISPICKVAL(Reporting_Status__c, &quot;Lost&quot;), ISPICKVAL(Reporting_Status__c, &quot;Client Withdrew&quot;), ISPICKVAL(Reporting_Status__c, &quot;AFS Withdrew&quot;)),
if(MONTH(Reporting_Status_Since__c) &gt; 8, TEXT(YEAR(Reporting_Status_Since__c)+1) ,TEXT(YEAR(Reporting_Status_Since__c))),
if(MONTH(CloseDate) &gt; 8, TEXT(YEAR(CloseDate)+1) ,TEXT(YEAR(CloseDate))))</formula>
        <label>Opp FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Auto_Id__c</fullName>
        <displayFormat>{0}</displayFormat>
        <inlineHelpText>Number that is system-generated when a new opportunity is created. Opportunity ID field is read-only.</inlineHelpText>
        <label>Opportunity Auto Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sales_Credit_Total__c</fullName>
        <label>Opportunity Sales Credit % Total</label>
        <summarizedField>Opportunity_Team_Roles__c.Sales_Credit__c</summarizedField>
        <summaryForeignKey>Opportunity_Team_Roles__c.Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Team_Roles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Team Roles</label>
        <referenceTo>Opportunity_Team_Roles__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outsourcing_End__c</fullName>
        <inlineHelpText>Date the Outsourcing portion of the contract will be complete.</inlineHelpText>
        <label>Outsourcing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outsourcing_Start__c</fullName>
        <inlineHelpText>Start/End Dates should reflect the base award/booked sale represented by the Total Current Revenue</inlineHelpText>
        <label>Outsourcing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outsourcing_Total_Revenue__c</fullName>
        <label>Outsourcing Total Revenue</label>
        <summarizedField>OpportunityLineItem.Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Type_of_Work__c</field>
            <operation>contains</operation>
            <value>Outsourcing</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_Duration__c</fullName>
        <formula>IF(NOT(ISBLANK( Overall_End_Date__c )) &amp;&amp; NOT(ISBLANK( Overall_Start_Date__c ))
     ,(((YEAR( Overall_End_Date__c  ) - YEAR( Overall_Start_Date__c  ) - 1) *12) + (12 - MONTH( Overall_Start_Date__c  ) +1) + MONTH( Overall_End_Date__c  ))
     , null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_End_Date__c</fullName>
        <formula>IF (AND(NOT(ISBLANK(Consulting_End__c )), NOT(ISBLANK( Outsourcing_End__c ))), IF (Consulting_End__c &lt; Outsourcing_End__c, Outsourcing_End__c, Consulting_End__c), 

IF (AND(NOT(ISBLANK(Consulting_End__c )), ISBLANK( Outsourcing_End__c )), Consulting_End__c , Outsourcing_End__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Start_Date__c</fullName>
        <formula>IF (AND(NOT(ISBLANK(Consulting_Start__c )), NOT(ISBLANK( Outsourcing_Start__c  ))),    IF (Consulting_Start__c &gt; Outsourcing_Start__c, Outsourcing_Start__c, Consulting_Start__c),

IF (AND(NOT(ISBLANK(Consulting_Start__c )), ISBLANK( Outsourcing_Start__c  )), Consulting_Start__c , Outsourcing_Start__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Total_Costs__c</fullName>
        <label>Overall Total Costs</label>
        <summarizedField>OpportunityLineItem.Total_Costs__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_Total_HW_SW__c</fullName>
        <label>Overall Total HW/SW</label>
        <summarizedField>OpportunityLineItem.HW_SW_Costs__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overall_Total_Subcontractor_Expenses__c</fullName>
        <label>Overall Total Subcontractor Expenses</label>
        <summarizedField>OpportunityLineItem.Subcontractor_Expenses__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PRG_Review_Date__c</fullName>
        <label>PRG Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTW_Review__c</fullName>
        <inlineHelpText>Optional field that is tracked in the Time Over Target (TOT) file that is used to track Top Opps and AFS High Priority Deals. Field generally completed by Leadership; leave field blank if date unknown.</inlineHelpText>
        <label>PTW Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Peak_Capital_Balance__c</fullName>
        <description>Peak Capital Balance is the highest capital balance in any one month during the contract. Most commonly, it results from billing in arrears and recognizing revenue in the month of service, which generates an unbilled services balance.</description>
        <inlineHelpText>Highest capital balance in any one month during the contract. Entered as a dollar amount. User may enter 0 as a value if there is no Peak Capital Balance.</inlineHelpText>
        <label>Peak Capital Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PoC_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicate who is on point to deliver this sales number?</inlineHelpText>
        <label>PoC Responsible?</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <formula>Account.Portfolio__c</formula>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Trigger_MFC__c</fullName>
        <inlineHelpText>Field indicates if the customer has been provided the best price possible for a deal</inlineHelpText>
        <label>Does Pricing Trigger MFC?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Function__c</fullName>
        <inlineHelpText>Indicates if the majority of labor for the contract will come from the Business Process Outsourcing, Business Support, Management Consulting, or Technology Services Function.</inlineHelpText>
        <label>Primary Function</label>
        <picklist>
            <picklistValues>
                <fullName>Business Process Outsourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prime_Contractor_If_not_AFS__c</fullName>
        <inlineHelpText>If AFS is the subcontractor, include the name of the prime on the deal.</inlineHelpText>
        <label>Prime Contractor (If not AFS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <label>Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Progress_Notes__c</fullName>
        <description>The ability for users to enter notes about the opportunity. This is different then the description section.</description>
        <inlineHelpText>The ability for users to enter progress notes on the opportunity.</inlineHelpText>
        <label>Progress Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <inlineHelpText>The B&amp;P ID for the opportunity. Project Accounting generates this code in CostPoint when the opportunity advances beyond Stage 0.</inlineHelpText>
        <label>Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_IDs_Creation_Date__c</fullName>
        <inlineHelpText>The date the Project IDs were created.</inlineHelpText>
        <label>Project ID Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Include_Scope_Complexity__c</fullName>
        <inlineHelpText>This field is used to account for effort based risk that can not be accounted for in the ADM estimator</inlineHelpText>
        <label>Does Estimate Include Scope Complexity?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Submission_Date__c</fullName>
        <inlineHelpText>Date AFS submitted the proposal. The Proposal Submission Date should always be before both the Expected Contract Sign Date and Actual Contract Sign Date.</inlineHelpText>
        <label>Proposal Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if proposal was submitted.</inlineHelpText>
        <label>Proposal Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Assessment_Stage_2B__c</fullName>
        <inlineHelpText>Populated based on revenue thresholds and only after Quality Assurance reviews are finalized by the QA Director in the AFS &amp; QA Risk Tool located at https://qa.accenturefederal.com. For info on when QA reviews are required by stage, refer to Policy 17.</inlineHelpText>
        <label>QA Assessment - Stage 2B</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Assessment_Stage_3__c</fullName>
        <inlineHelpText>Populated based on revenue thresholds and only after Quality Assurance reviews are finalized by the QA Director in the AFS &amp; QA Risk Tool located at https://qa.accenturefederal.com. For info on when QA reviews are required by stage, refer to Policy 17.</inlineHelpText>
        <label>QA Assessment - Stage 3</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Not_Documented_and_Finalized_in_QA_To__c</fullName>
        <description>Explain QA Not Finalized in Tool</description>
        <inlineHelpText>This field is required if QA reviews have not been documented and finalized in QA Risk Tool. User must provide explanation.</inlineHelpText>
        <label>Explain QA Not Documented/Finalized</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QA_Risk_Tier_Stage_2B__c</fullName>
        <description>Quality Assurance Review &amp; Risk fields should be populated only after Quality Assurance reviews are finalized by the QA Director in the AFS QA &amp; Risk Tool located at https://qa.accenturefederal.com. For information on when QA reviews are required by stage, please refer to AFS Policy 17.</description>
        <inlineHelpText>Populated based on revenue thresholds and only after Quality Assurance reviews are finalized by the QA Director in the AFS &amp; QA Risk Tool located at https://qa.accenturefederal.com. For info on when QA reviews are required by stage, refer to Policy 17.</inlineHelpText>
        <label>QA Risk Tier - Stage 2B</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Risk_Tier_Stage_3__c</fullName>
        <inlineHelpText>Populated based on revenue thresholds and only after Quality Assurance reviews are finalized by the QA Director in the AFS &amp; QA Risk Tool located at https://qa.accenturefederal.com. For info on when QA reviews are required by stage, refer to Policy 17.</inlineHelpText>
        <label>QA Risk Tier - Stage 3</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_been_documented_and_finalized_in_QA__c</fullName>
        <inlineHelpText>This field is required if the QA Risk and Assessment fields are finalized and populated. User must indicate whether or not the QA reviews have been documented and finalized in the QA Tool.</inlineHelpText>
        <label>QA Documented and Finalized in QA Tool?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFP_Release_Date__c</fullName>
        <inlineHelpText>Date RFP was released. This field is used for tracking purposes. This date field must always come before the &quot;Proposal Submission Date&quot; field but may be equal to the Draft RFP Release Date.</inlineHelpText>
        <label>RFP Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Status_Since__c</fullName>
        <inlineHelpText>Tracks the date that an opportunity advancement request was submitted. Reporting Status Date is a read-only field used for reporting purposes.</inlineHelpText>
        <label>Reporting Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Status__c</fullName>
        <inlineHelpText>Field updated based on the stage of the opportunity through workflow. Reporting Status is a read-only field used for reporting purposes.</inlineHelpText>
        <label>Reporting Status</label>
        <picklist>
            <controllingField>Approved_Status_Stage__c</controllingField>
            <picklistValues>
                <fullName>Lost</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Client Withdrew</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>AFS Withdrew</fullName>
                <color>#33CCFF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
                <color>#A845DC</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Admin_View__c</fullName>
        <formula>IF( TEXT( Approved_Status_Stage__c ) &lt;&gt; TEXT( Status_Stage_Requested__c ) &amp;&amp; TEXT(Status_Stage_Requested__c ) &lt;&gt; null , true, false)</formula>
        <label>Sales Admin View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Committed_for_First_Year__c</fullName>
        <inlineHelpText>What sales have we committed to in the account plan for the first year of the contract?</inlineHelpText>
        <label>Sales Committed for First Year?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_Complexity_Within_Guidelines__c</fullName>
        <inlineHelpText>Does the scope complexity fall within guidelines of the proposal estimate</inlineHelpText>
        <label>Scope Complexity Within Guidelines?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope_Substantiated_in_BOE__c</fullName>
        <inlineHelpText>Confirm any scope complexity incorporated into an estimate by the solution architect is documented within the basis of estimate submitted to the government (full disclosure)</inlineHelpText>
        <label>Scope Complexity Substantiated in BOE?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Email_to_OSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email to OSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Act_Clause_Applicable__c</fullName>
        <inlineHelpText>Indicates if Service Contract Act Clause is applicable.  The SCA Clause requires AFS pay not less than prevailing wage rates in Service Contracts.

Applies to Opp Type: 
Competitive
Extension
On-Contract Growth
Re-compete

Excludes: Options</inlineHelpText>
        <label>Service Contract Act Clause Applicable?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_Revenue__c</fullName>
        <formula>Total_Current_Revenue__c  -  Overall_Total_HW_SW__c</formula>
        <label>Services Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solicitation_Contract_Number__c</fullName>
        <inlineHelpText>Solicitation/Contract Number is used to tie opportunities to RFPs for new procurements. For Extension or On-Contract Growth opportunities, the contract number is used.</inlineHelpText>
        <label>Solicitation / Contract Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Baseline_Review__c</fullName>
        <inlineHelpText>Optional field that is tracked in the Time Over Target (TOT) file that is used to track Top Opps and AFS High Priority Deals. Field generally completed by Leadership; leave field blank if date unknown.</inlineHelpText>
        <label>Solution Baseline Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>STaR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_1A_Entry_Date__c</fullName>
        <label>Stage 1A Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_1A_Offline_sent__c</fullName>
        <label>Stage 1A Offline sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_1B_Entry_Date__c</fullName>
        <label>Stage 1B Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_1B_Offline_sent__c</fullName>
        <label>Stage 1B Offline sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_2A_Entry_Date__c</fullName>
        <label>Stage 2A Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_2A_Offline_sent__c</fullName>
        <label>Stage 2A Offline sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_2B_Entry_Date__c</fullName>
        <label>Stage 2B Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_2B_Offline_sent__c</fullName>
        <label>Stage 2B Offline sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_3_Entry_Date__c</fullName>
        <label>Stage 3 Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_3_Offline_sent__c</fullName>
        <label>Stage 3 Offline sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Stage 1A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Stage_Requested__c</fullName>
        <inlineHelpText>Use this field to request advancement to a subsequent stage when all required fields are complete.
Please note: there may be additional fields on the Related Lists (e.g., Financial Details, Attributes, Opp Team Roles) that are required for advancement.</inlineHelpText>
        <label>Status/Stage Requested</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Withdrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS Withdrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Portfolio__c</fullName>
        <formula>Account.Sub_Portfolio__c</formula>
        <label>Sub Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Involvement__c</fullName>
        <formula>if(    Overall_Total_Costs__c    = 0, 0,  Overall_Total_Subcontractor_Expenses__c /  Overall_Total_Costs__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reflects what percentage of Total Costs are allocated to the Sub-Contractor Cost Component</inlineHelpText>
        <label>Subcontractor Involvement %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>